Make pilot spin up the camera capture

--- a/pilot/Makefile
+++ b/pilot/Makefile
@@ -1,12 +1,12 @@
 
-TOOLS:=
+TOOLS:=rifftoh264
 CFILES:=$(wildcard *.c)
 CPPFILES:=$(wildcard *.cpp)
 C_O:=$(patsubst %.c,obj/%.o,$(CFILES))
 CPP_O:=$(patsubst %.cpp,obj/%.o,$(CPPFILES))
 LIBS:=-L/opt/vc/lib -lvcos -lmmal -lmmal_core -lmmal_util -lbcm_host -lpthread -Wl,--no-whole-archive -L/opt/vc/lib/ -lbrcmGLESv2 -lbrcmEGL
 OPT?=-O0
-CFLAGS:=-I ../moneypit_v/mpv_teensy -I/opt/vc/include -Wall -Werror $(OPT)
+CFLAGS:=-I/opt/vc/include -Wall -Werror $(OPT)
 CPPFLAGS:=$(CFLAGS) -std=gnu++11
 TOOL_O:=$(patsubst %,obj/%.o,$(TOOLS))
 PILOT_O:=$(filter-out $(TOOL_O),$(C_O) $(CPP_O))
@@ -53,20 +53,15 @@ test_compile:	pilot
 pilot:	$(PILOT_O)
 	g++ -g -o $@ $(PILOT_O) $(LIBS) -std=gnu++11
 
-mkpng:	obj/mkpng.o obj/imagewrite.o obj/yuv.o
-	gcc -g -o $@ $^ -std=gnu11 -lm
+define build_tool =
+$(1):	obj/$(1).o
+	g++ -g -o $(1) obj/$(1).o $(LIBS) -std=gnu++11
+endef
 
-mkyuv:	obj/mkyuv.o obj/imagewrite.o obj/yuv.o
-	g++ -g -o $@ $^ -std=gnu++11 -lm
-
-mkdetect:	obj/mkdetect.o obj/imagewrite.o obj/yuv.o obj/detect_inner.o obj/settings.o obj/project.o obj/queue.o
-	g++ -g -o $@ $^ -std=gnu++11 -lm -lefence
-
-mkchecker:	obj/mkchecker.o
-	g++ -g -o $@ $^ -std=gnu++11 -lm
+$(foreach TOOL,$(TOOLS),$(eval $(call build_tool,$(TOOL))))
 
 clean:
-	rm -rf obj $(TOOLS)
+	rm -rf obj $(TOOLS) pilot
 
 obj/%.o:	%.c
 	@mkdir -p obj
