progress towards training

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 mktraining/mktraining
 blur/blur
 stb
+obj
 ip_beacon/build
 pilot/obj
 pilot/pilot
@@ -23,3 +24,4 @@ network/data
 network/proto
 network/some-lmdb
 build_training_database/mktrain
+build_training_database/build_training_database
