--- a/pilot/Makefile
+++ b/pilot/Makefile
@@ -7,7 +7,7 @@ CPP_O:=$(patsubst %.cpp,obj/%.o,$(CPPFILES))
 LIBS:=-lpthread -Wl,--no-whole-archive -lCaffe2_CPU -lglog
 OPT?=-O0
 CFLAGS:=-Wall -Werror $(OPT) -I/usr/local/include -I/usr/local/src/caffe2/third_party/eigen
-CPPFLAGS:=$(CFLAGS) -std=gnu++11
+CPPFLAGS:=$(CFLAGS) -std=gnu++11 -Wno-deprecated
 TOOL_O:=$(patsubst %,obj/%.o,$(TOOLS))
 PILOT_O:=$(filter-out $(TOOL_O),$(C_O) $(CPP_O))
 ifeq ($(wildcard /opt/vc),)
