compensate for light

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ network/some-lmdb
 build_training_database/mktrain
 build_training_database/build_training_database
 build_training_database/mkdbfromstream
+calc/obj
