Macrofab proto order of teensy hat v2b

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ build_training_database/mktrain
 build_training_database/build_training_database
 build_training_database/mkdbfromstream
 calc/obj
+teensy_32_v2/macrofab_order_20171126/
