--- a/calibrate_camera/Makefile
+++ b/calibrate_camera/Makefile
@@ -1,9 +1,10 @@
 
 LFLAGS:=-L/usr/local/lib
 CFLAGS:=-I/usr/local/include
+PYTHON:=python2
 
 obj/flatshow:	obj/flatshow.o obj/table.o
-	g++ $(LFLAGS) -g -o $@ $^ -lopencv_core -lopencv_highgui -lopencv_imgcodecs -lopencv_imgproc
+	g++ $(LFLAGS) -g -o $@ $^ -lopencv_core -lopencv_imgproc -lopencv_highgui # -lopencv_imgcodecs
 
 clean:
 	rm -rf obj
@@ -13,8 +14,8 @@ obj/%.o:	%.cpp
 	g++ $(CFLAGS) -c -g -o $@ $< -MMD -std=gnu++11
 
 table.cpp:	maketable_rect.py calibrate.pkl localcrop.py
-	python3 maketable_rect.py
+	$(PYTHON) maketable_rect.py
 #table.cpp:	maketable_flat.py calibrate.pkl localcrop.py
-#	python maketable_flat.py
+#	python2 maketable_flat.py
 
 -include $(wildcard obj/*.d)
